--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
     buildFeatures{
 
         dataBinding = true
+        viewBinding = true
     }
 }
 
@@ -69,4 +70,5 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.13.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+
 }
