--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,5 +71,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 
+    //Material Design Bottom Navigation
+    implementation 'com.google.android.material:material:1.8.0-alpha01'
+
+
 
 }
