--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,10 @@ dependencies {
     //Material Design Bottom Navigation
     implementation 'com.google.android.material:material:1.8.0-alpha01'
 
+    //Youtube API
+    implementation files('libs/YoutubeAndroidPlayerApi.jar')
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:11.1.0'
+
 
 
 
