Update: Category List adapter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".CategoryItemsActivity"
+            android:name=".Activitiy.CategoryItemsActivity"
             android:exported="false"
             android:label="@string/title_activity_category_items"
             android:theme="@style/Theme.FoodArchitectMVVM.NoActionBar">
@@ -32,21 +32,21 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".RandomMealDetailActivity"
+            android:name=".Activitiy.RandomMealDetailActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".Activitiy.MainActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".SplashScreenActivity"
+            android:name=".Activitiy.SplashScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
